// Copyright (c) 2019 Cisco and/or its affiliates.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at:
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package model;

// SecurityAssociation is used to store definition for security association as a k8s CRD resource.
message SecurityAssociation {
    // Security Association Name
    string name = 1;
    // Sase Service Instance Name
    string service_instance_name = 2;
    // Authentication algorithm
    string auth_algorithm = 3;
    // Authentication Shared Secret key
    string auth_shared_key = 4;
    // Encryption Algorithm
    string encrypt_algorithm = 5;
    // Encryption Shared Key
    string encrypt_shared_key = 6;
    // Mode Tunnel or Transport Mode
    string mode = 7;
}
